--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="vessel">
-       <h2>The fox jumped over the lazy dog</h2> 
+       <h2><b><i>The fox jumped over the lazy dog</i></b></h2> 
     </div>
 </body>
 </html>
